# core

./: .blockhelix-pm-notes.md  .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Makefile  README.md  REFACTOR_SUMMARY.md  amplify.yml  blockhelix-economic-analysis.md  devnet-deployment.json  docker-compose.yml  package.json  test-runtime-integration.sh  verify-scaffold.sh
.archive/: FRONTEND-WIRING-SUMMARY.md  RUNTIME_INTEGRATION.md  WALLET_AUTH.md
agent/: .env.example  .gitignore  package-lock.json  package.json
agent-runtime/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
analysis/: capital-formation.md  capital_formation_model.py  economic_model.py  high-value-job-thesis.md  non-speculative-token-models.md  punitive-slashing-analysis.md  punitive_slashing_model.py  turbocharge-analysis.md
app/: .blockhelix-pm-notes.md  .env.example  .env.production  README.md  amplify.yml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: agent-api.md  agent-pagerank-spec.md  blockhelix-economic-analysis.md  blockhelix-tech-spec-v2.md  copy-review.md  economic-invariants.md  franco-nevada-analogy.md  model-parameters.md  non-circularity-proof.md  pitch-narrative.md  slashing-economics.md  staked-asset-economics.md  startup-models-research.md  whitepaper.md
economic-model/: bonding-curve-sim.py  simulate.py
openclaw/: Dockerfile  adapter.js  entrypoint.sh  package.json
programs/agent-factory/: Cargo.toml
programs/agent-factory/src/: lib.rs
scripts/: check-registry.ts  (+7 more)
(+291 files in other folders)
